--- a/cv.html
+++ b/cv.html
@@ -749,9 +749,9 @@
       </div>
 
       <br/><div class="cv">
-      <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021"><em>Topological Data Analysis</em> Workshop</a></h4></div>
         <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets via TDA<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Poster</a></span>--></div>
-        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line poster due to the COVID-19)</div>
       </div>
 
       <br/><div class="cv">
@@ -1381,12 +1381,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Date:</div><div class="value">7th to 11th of June of 2021</div>
 </div>
 
+<span id="divulganextgen2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://divulganextgen.kunvoca.es/">Divulga NextGen - Congreso online</a></h4></div>
+  <div class="property">Organizer:</div><div class="value">Lucía Olmo García, Enrique Javier Carrasco Correa, Gloria Domínguez Rodríguez, Elena Sánchez López, Rafael Carlos Estévez Toledano and Beatriz María Fresco Cala</div>
+  <div class="property">Location:</div><div class="value">On-line</div>
+  <div class="property">Date:</div><div class="value">26th to 28th of May of 2021</div>
+</div>
+
 <span id="workshopTDA2021"></span>
 <br/><div class="cv">
 <div class="year">
 
 </div><div class="title">
-<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/"><em>Topological Data Analysis</em> Workshop</a></h4></div>
   <div class="property">Organizer:</div><div class="value">Brittany Fasy, Kathryn Hess, Matthew Kahle, Sayan Mukherjee and Jose Perea</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://www.imsi.institute/">Institute for Mathematical and Statistical Innovation</a></div>
   <div class="property">Location:</div><div class="value">Chicago, Illinois, USA (On-line due to COVID-19)</div>
