--- a/cv_es.html
+++ b/cv_es.html
@@ -730,6 +730,12 @@
       </div>
 
       <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#workshopTDA2021"><em>Topological Data Analysis</em> Workshop</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology of Semialgebraic Sets via TDA<!--<span style="float:right;"><a href="pdf/XYZ.pdf">Póster</a></span>--></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Póster on-line due to the COVID-19)</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"><h4>2019</h4></div><div class="title"><h4>&emsp;<a href="#MEGA2019">MEGA 2019: Effective Methods in Algebraic Geometry</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">Computing the Homology Groups of Closed Semialgebraics Sets in Weak Exponential Time<span style="float:right;"><a href="pdf/Poster_Computing_the_Homology_of_Semialgebraic_Sets3.pdf">Póster</a></span></div>
        <div class="property"></div><div class="value">(obtuvo uno de los tres <a href="#MEGA2019award">Special Awards to Young Researchers presenting their Posters</a>)</div>
@@ -1385,12 +1391,23 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
   <div class="property">Fecha:</div><div class="value">del 7 al 11 de junio del 2021</div>
 </div>
 
+<span id="divulganextgen2021"></span>
+<br/><div class="cv">
+<div class="year">
+
+</div><div class="title">
+<h4>&emsp;<a href="https://divulganextgen.kunvoca.es/">Divulga NextGen - Congreso online</a></h4></div>
+  <div class="property">Organizador:</div><div class="value">Lucía Olmo García, Enrique Javier Carrasco Correa, Gloria Domínguez Rodríguez, Elena Sánchez López, Rafael Carlos Estévez Toledano y Beatriz María Fresco Cala</div>
+  <div class="property">Lugar:</div><div class="value">On-line</div>
+  <div class="property">Fecha:</div><div class="value">26th to 28th of May of 2021</div>
+</div>
+
 <span id="workshopTDA2021"></span>
 <br/><div class="cv">
 <div class="year">
 
 </div><div class="title">
-<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/">Workshop on <em>Topological Data Analysis</em></a></h4></div>
+<h4>&emsp;<a href="https://www.imsi.institute/topological-data-analysis/"><em>Topological Data Analysis</em> Workshop</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(Taller en Análisis Topológico de Datos)</em></h4></div>
   <div class="property">Organizador:</div><div class="value">Brittany Fasy, Kathryn Hess, Matthew Kahle, Sayan Mukherjee y Jose Perea</div>
