--- a/cv.html
+++ b/cv.html
@@ -544,15 +544,22 @@
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
          <br/><div class="cv">
-         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
+         <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2021Symposium">Minisymposium <em>Computational Real Algebraic Geometry</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#SIAMAG2021">SIAM Conference on Applied Algebraic Geometry 2021</a></h4></div>
            <div class="pretalktitle"></div><div class="talktitle">What's new in Computational Real Algebraic Geometry? (Introductory Talk)<!--<span style="float:right;"><a href="pdf/SIAMAG21_slides.pdf">Slides</a></span>--></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with C. Riener.</div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
          <br/><div class="cv">
+         <div class="year"></div><div class="title"><h4>&emsp;<a href="#MCA2021Session">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#MCA2021">Mathematical Congress of the Americas 2021</a></h4></div>
+           <div class="pretalktitle"></div><div class="talktitle">Symbolic vs. Numerical: Allies or Enemies? (Introductory Talk)<span style="float:right;"><a href="pdf/MCA2021_slides.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=KYDo42gCZYg">Video</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Together with M. Bender.</div>
+           <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
+         </div>
+
+         <br/><div class="cv">
          <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
-           <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<span style="float:right;"><a href="pdf/MEGA2021_slides_41.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=hmFY7y9Uyic">Teaser</a> / <a href="https://www.youtube.com/watch?v=KYDo42gCZYg">Video</a></span></div>
+           <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<span style="float:right;"><a href="pdf/MEGA2021_slides_41.pdf">Slides</a> / <a href="https://www.youtube.com/watch?v=hmFY7y9Uyic">Teaser</a> / <a href="https://www.youtube.com/watch?v=sGwI7t79d4s">Video</a></span></div>
            <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(On-line talk due to the COVID-19)</div>
          </div>
 
@@ -618,7 +625,7 @@
 </div>
 
    <br/><div class="cv">
-   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4>at <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
+   <div class="year"><h4></h4></div><div class="title"><h4>&emsp;<a href="#SIAMAG2019Symposium">Minisymposium <em>Numerical methods for structured polynomial system solving</em></a></h4></div><div class="year"></div><div class="title"><h4> at the <a href="#SIAMAG2019">SIAM Conference on Applied Algebraic Geometry 2019</a></h4></div>
      <div class="pretalktitle"></div><div class="talktitle">Farewell to Weyl: Condition-based analysis with a Banach norm in numerical algebraic geometry<span style="float:right;"><a href="pdf/SIAMAG19_slides.pdf">Slides</a></span></div>
    </div>
 
