--- a/cv_es.html
+++ b/cv_es.html
@@ -535,6 +535,13 @@
       </div>
 
       <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="#MCA2021Session">Special Session <em>Symbolic and Numerical Computation with Polynomials</em></a></h4></div><div class="year"></div><div class="title"><h4> en la <a href="#MCA2021">Mathematical Congress of the Americas 2021</a></h4></div>
+        <div class="pretalktitle"></div><div class="talktitle">Symbolic vs. Numerical: Allies or Enemies? (Introductory Talk)<span style="float:right;"><a href="pdf/MCA2021_slides.pdf">Diapositivas</a> / <a href="https://www.youtube.com/watch?v=KYDo42gCZYg">Vídeo</a></span></div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">Junto a M. Bender.</div>
+        <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
+      </div>
+
+      <br/><div class="cv">
       <div class="year"></div><div class="title"><h4>&emsp;<a href="#MEGA2021">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
         <div class="pretalktitle"></div><div class="talktitle">A numerical algorithm for zero counting. IV: An adaptive speedup<span style="float:right;"><a href="pdf/MEGA2021_slides_41.pdf">Diapositivas</a> / <a href="https://www.youtube.com/watch?v=hmFY7y9Uyic">Teaser</a> / <a href="https://www.youtube.com/watch?v=KYDo42gCZYg">Vídeo</a></span></div>
         <div class="pretalktitle"></div><div class="talktitle" style="font-variant: normal;font-style:italic;font-size:small;">(Ponencia on-line por la COVID-19)</div>
